Reimport sbml/iCac802

--- a/sbml/iCac802/limits.yaml
+++ b/sbml/iCac802/limits.yaml
@@ -1,434 +1,364 @@
-- reaction: R_R0002
+- reaction: Biomass
   lower: 0.0
+- reaction: R0002
+  fixed: 0.0
+- reaction: R0010
   upper: 0.0
-- reaction: R_R0010
+- reaction: R0014
+  fixed: 0.0
+- reaction: R0022
+  fixed: 0.0
+- reaction: R0028
   upper: 0.0
-- reaction: R_R0014
+- reaction: R0037
   lower: 0.0
+- reaction: R0047
+  fixed: 0.0
+- reaction: R0063
   upper: 0.0
-- reaction: R_R0022
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0028
-  upper: 0.0
-- reaction: R_R0037
-  lower: 0.0
-- reaction: R_R0047
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0063
-  upper: 0.0
-- reaction: R_R0086
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0097
-  upper: 0.0
-- reaction: R_R0120
-  lower: 0.0
-- reaction: R_R0123
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0145
-  lower: 0.0
-- reaction: R_R0155
-  lower: 0.0
-- reaction: R_R0158
-  upper: 0.0
-- reaction: R_R0159
-  upper: 0.0
-- reaction: R_R0160
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0183
-  upper: 0.0
-- reaction: R_R0190
-  lower: 0.0
-- reaction: R_R0192
-  lower: 0.0
-- reaction: R_R0193
-  lower: 0.0
-- reaction: R_R0194
-  lower: 0.0
-- reaction: R_R0195
-  lower: 0.0
-- reaction: R_R0196
-  lower: 0.0
-- reaction: R_R0197
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0198
-  lower: 0.0
-- reaction: R_R0200
-  lower: 0.0
-- reaction: R_R0202
-  lower: 0.0
-- reaction: R_R0203
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0204
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0205
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0206
-  lower: 0.0
+- reaction: R0086
+  fixed: 0.0
+- reaction: R0097
   upper: 0.0
-- reaction: R_R0207
+- reaction: R0120
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0239
+- reaction: R0123
+  fixed: 0.0
+- reaction: R0140
+  fixed: 0.0
+- reaction: R0145
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0246
+- reaction: R0155
   lower: 0.0
+- reaction: R0158
   upper: 0.0
-- reaction: R_R0251
-  lower: 0.0
+- reaction: R0159
   upper: 0.0
-- reaction: R_R0259
-  lower: 0.0
+- reaction: R0160
+  fixed: 0.0
+- reaction: R0183
   upper: 0.0
-- reaction: R_R0265
+- reaction: R0190
   lower: 0.0
-- reaction: R_R0301
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0341
+- reaction: R0192
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0359
+- reaction: R0193
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0379
-  upper: 0.0
-- reaction: R_R0384
-  upper: 0.0
-- reaction: R_R0386
+- reaction: R0194
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0389
-  upper: 0.0
-- reaction: R_R0391
-  upper: 0.0
-- reaction: R_R0395
-  upper: 0.0
-- reaction: R_R0396
-  upper: 0.0
-- reaction: R_R0397
-  upper: 0.0
-- reaction: R_R0405
+- reaction: R0195
   lower: 0.0
-- reaction: R_R0427
+- reaction: R0196
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0439
-  upper: 0.0
-- reaction: R_R0440
-  upper: 0.0
-- reaction: R_R0445
+- reaction: R0197
+  fixed: 0.0
+- reaction: R0198
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0459
+- reaction: R0200
   lower: 0.0
-- reaction: R_R0477
+- reaction: R0202
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0484
-  upper: 0.0
-- reaction: R_R0493
+- reaction: R0203
+  fixed: 0.0
+- reaction: R0204
+  fixed: 0.0
+- reaction: R0205
+  fixed: 0.0
+- reaction: R0206
+  fixed: 0.0
+- reaction: R0207
+  fixed: 0.0
+- reaction: R0239
+  fixed: 0.0
+- reaction: R0246
+  fixed: 0.0
+- reaction: R0251
+  fixed: 0.0
+- reaction: R0259
+  fixed: 0.0
+- reaction: R0265
   lower: 0.0
-- reaction: R_R0518
+- reaction: R0301
+  fixed: 0.0
+- reaction: R0341
+  fixed: 0.0
+- reaction: R0359
+  fixed: 0.0
+- reaction: R0379
   upper: 0.0
-- reaction: R_R0529
-  lower: 0.0
-- reaction: R_R0533
-  lower: 0.0
+- reaction: R0384
   upper: 0.0
-- reaction: R_R0536
+- reaction: R0386
+  fixed: 0.0
+- reaction: R0389
   upper: 0.0
-- reaction: R_R0537
+- reaction: R0391
   upper: 0.0
-- reaction: R_R0541
-  lower: 0.0
+- reaction: R0395
   upper: 0.0
-- reaction: R_R0542
-  lower: 0.0
+- reaction: R0396
   upper: 0.0
-- reaction: R_R0547
+- reaction: R0397
   upper: 0.0
-- reaction: R_R0549
+- reaction: R0405
   lower: 0.0
+- reaction: R0422
+  fixed: 0.0
+- reaction: R0427
+  fixed: 0.0
+- reaction: R0439
   upper: 0.0
-- reaction: R_R0551
-  lower: 0.0
+- reaction: R0440
   upper: 0.0
-- reaction: R_R0568
-  lower: 0.0
-- reaction: R_R0574
+- reaction: R0445
+  fixed: 0.0
+- reaction: R0459
   lower: 0.0
+- reaction: R0477
+  fixed: 0.0
+- reaction: R0484
   upper: 0.0
-- reaction: R_R0577
+- reaction: R0493
   lower: 0.0
+- reaction: R0518
   upper: 0.0
-- reaction: R_R0585
+- reaction: R0529
   lower: 0.0
+- reaction: R0533
+  fixed: 0.0
+- reaction: R0536
   upper: 0.0
-- reaction: R_R0602
+- reaction: R0537
   upper: 0.0
-- reaction: R_R0621
+- reaction: R0541
+  fixed: 0.0
+- reaction: R0542
+  fixed: 0.0
+- reaction: R0547
   upper: 0.0
-- reaction: R_R0624
+- reaction: R0549
+  fixed: 0.0
+- reaction: R0551
+  fixed: 0.0
+- reaction: R0568
   lower: 0.0
+- reaction: R0574
+  fixed: 0.0
+- reaction: R0577
+  fixed: 0.0
+- reaction: R0585
+  fixed: 0.0
+- reaction: R0602
   upper: 0.0
-- reaction: R_R0666
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0688
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R0693
-  upper: 0.0
-- reaction: R_R0694
-  upper: 0.0
-- reaction: R_R0695
-  upper: 0.0
-- reaction: R_R0696
-  upper: 0.0
-- reaction: R_R0697
-  upper: 0.0
-- reaction: R_R0698
-  upper: 0.0
-- reaction: R_R0699
-  upper: 0.0
-- reaction: R_R0700
+- reaction: R0621
   upper: 0.0
-- reaction: R_R0701
+- reaction: R0624
+  fixed: 0.0
+- reaction: R0666
+  fixed: 0.0
+- reaction: R0688
+  fixed: 0.0
+- reaction: R0693
   upper: 0.0
-- reaction: R_R0702
+- reaction: R0694
   upper: 0.0
-- reaction: R_R0704
+- reaction: R0695
   upper: 0.0
-- reaction: R_R0756
-  lower: 0.0
+- reaction: R0696
   upper: 0.0
-- reaction: R_R0763
-  lower: 0.0
-- reaction: R_R0764
-  lower: 0.0
-- reaction: R_R0804
-  lower: 0.0
+- reaction: R0697
   upper: 0.0
-- reaction: R_R0808
-  lower: 0.0
+- reaction: R0698
   upper: 0.0
-- reaction: R_R0809
-  lower: 0.0
+- reaction: R0699
   upper: 0.0
-- reaction: R_R0814
+- reaction: R0700
   upper: 0.0
-- reaction: R_R0822
+- reaction: R0701
   upper: 0.0
-- reaction: R_R0824
-  lower: 0.0
+- reaction: R0702
   upper: 0.0
-- reaction: R_R0828
-  lower: 0.0
-- reaction: R_R0832
-  lower: 0.0
+- reaction: R0704
   upper: 0.0
-- reaction: R_R0835
+- reaction: R0756
+  fixed: 0.0
+- reaction: R0763
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0839
+- reaction: R0764
   lower: 0.0
+- reaction: R0804
+  fixed: 0.0
+- reaction: R0808
+  fixed: 0.0
+- reaction: R0809
+  fixed: 0.0
+- reaction: R0814
   upper: 0.0
-- reaction: R_R0849
-  lower: 0.0
+- reaction: R0822
   upper: 0.0
-- reaction: R_R0927
+- reaction: R0824
+  fixed: 0.0
+- reaction: R0828
   lower: 0.0
-  upper: 0.0
-- reaction: R_R0932
+- reaction: R0832
+  fixed: 0.0
+- reaction: R0835
+  fixed: 0.0
+- reaction: R0839
+  fixed: 0.0
+- reaction: R0849
+  fixed: 0.0
+- reaction: R0927
+  fixed: 0.0
+- reaction: R0932
   lower: -1000.0
-- reaction: R_R0942
+- reaction: R0942
   lower: 0.0
-- reaction: R_R0975
+- reaction: R0975
   upper: 0.0
-- reaction: R_R0987
+- reaction: R0987
   upper: 0.0
-- reaction: R_R0993
+- reaction: R0993
+  fixed: 0.0
+- reaction: R0994
+  fixed: 0.0
+- reaction: R0996
+  fixed: 0.0
+- reaction: R0997
   lower: 0.0
+- reaction: R1006
+  fixed: 0.0
+- reaction: R1030
   upper: 0.0
-- reaction: R_R0994
+- reaction: R1044
+  fixed: 0.0
+- reaction: R1075
   lower: 0.0
+- reaction: R1107
+  lower: 0.0
+- reaction: R1108
+  lower: 0.0
+- reaction: R1115
+  lower: 0.0
+- reaction: R1125
+  fixed: 0.0
+- reaction: R1141
   upper: 0.0
-- reaction: R_R0996
-  lower: 0.0
+- reaction: R1148
   upper: 0.0
-- reaction: R_R0997
-  lower: 0.0
-- reaction: R_R1006
-  lower: 0.0
+- reaction: R1154
   upper: 0.0
-- reaction: R_R1030
-  upper: 0.0
-- reaction: R_R1044
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1075
-  lower: 0.0
-- reaction: R_R1107
-  lower: 0.0
-- reaction: R_R1108
-  lower: 0.0
-- reaction: R_R1115
-  lower: 0.0
-- reaction: R_R1125
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1141
-  upper: 0.0
-- reaction: R_R1148
-  upper: 0.0
-- reaction: R_R1154
-  upper: 0.0
-- reaction: R_R1156
+- reaction: R1156
   lower: -1000.0
-- reaction: R_R1170
+- reaction: R1170
   lower: 0.0
-- reaction: R_R1171
+- reaction: R1171
   lower: 0.0
-- reaction: R_R1185
+- reaction: R1185
   upper: 0.0
-- reaction: R_R1210
+- reaction: R1207
+  fixed: 0.0
+- reaction: R1210
   lower: 0.0
-- reaction: R_R1213
+- reaction: R1213
   upper: 0.0
-- reaction: R_R1216
+- reaction: R1216
   upper: 0.0
-- reaction: R_R1235
+- reaction: R1235
+  fixed: 0.0
+- reaction: R1264
+  upper: 0.0
+- reaction: R1268
+  fixed: 0.0
+- reaction: R1275
   lower: 0.0
-  upper: 0.0
-- reaction: R_R1264
-  upper: 0.0
-- reaction: R_R1268
+- reaction: R1276
   lower: 0.0
-  upper: 0.0
-- reaction: R_R1275
+- reaction: R1277
   lower: 0.0
-- reaction: R_R1276
+- reaction: R1283
+  fixed: 0.0
+- reaction: R1347
+  upper: 0.0
+- reaction: R1349
+  fixed: 0.0
+- reaction: R1351
+  upper: 0.0
+- reaction: R1353
+  upper: 0.0
+- reaction: R1354
+  fixed: 0.0
+- reaction: R1355
   lower: 0.0
-- reaction: R_R1277
+- reaction: R1356
+  fixed: 0.0
+- reaction: R1359
+  fixed: 0.0
+- reaction: R1362
   lower: 0.0
-- reaction: R_R1283
+- reaction: R1363
+  fixed: 0.0
+- reaction: R1374
+  upper: 0.0
+- reaction: R1397
+  fixed: 0.0
+- reaction: R1423
+  upper: 0.0
+- reaction: R1448
+  fixed: 0.0
+- reaction: R1476
+  upper: 0.0
+- reaction: R1483
+  fixed: 8.39
+- reaction: R1490
+  upper: 0.0
+- reaction: R1503
   lower: 0.0
-  upper: 0.0
-- reaction: R_R1347
-  upper: 0.0
-- reaction: R_R1349
+- reaction: R1513
+  fixed: 0.0
+- reaction: R1519
   lower: 0.0
+- reaction: R1520
+  fixed: 0.0
+- reaction: R1521
+  fixed: 0.0
+- reaction: R1534
   upper: 0.0
-- reaction: R_R1351
+- reaction: R1535
+  fixed: 0.0
+- reaction: R1568
   upper: 0.0
-- reaction: R_R1353
-  upper: 0.0
-- reaction: R_R1354
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1355
-  lower: 0.0
-- reaction: R_R1356
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1359
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1362
-  lower: 0.0
-- reaction: R_R1363
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1374
-  upper: 0.0
-- reaction: R_R1397
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1423
-  upper: 0.0
-- reaction: R_R1448
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1476
-  upper: 0.0
-- reaction: R_R1483
-  lower: 8.39
-  upper: 8.39
-- reaction: R_R1490
-  upper: 0.0
-- reaction: R_R1503
-  lower: 0.0
-- reaction: R_R1513
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1519
-  lower: 0.0
-- reaction: R_R1520
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1521
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1534
-  upper: 0.0
-- reaction: R_R1535
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1568
-  upper: 0.0
-- reaction: R_R1584
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1585
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1590
+- reaction: R1584
+  fixed: 0.0
+- reaction: R1585
+  fixed: 0.0
+- reaction: R1590
   lower: -1000.0
-- reaction: R_R1608
+- reaction: R1608
+  fixed: 0.0
+- reaction: R1609
   lower: 0.0
+- reaction: R1649
+  lower: 0.0
+- reaction: R1681
+  fixed: 0.0
+- reaction: R1683
   upper: 0.0
-- reaction: R_R1609
+- reaction: R1705
+  fixed: 0.0
+- reaction: R1716
   lower: 0.0
-- reaction: R_R1649
-  lower: 0.0
-- reaction: R_R1681
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1683
-  upper: 0.0
-- reaction: R_R1705
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1716
-  lower: 0.0
-- reaction: R_R1719
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1727
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1746
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1747
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1748
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1765
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R1780
-  lower: 0.0
-  upper: 0.0
+- reaction: R1719
+  fixed: 0.0
+- reaction: R1727
+  fixed: 0.0
+- reaction: R1746
+  fixed: 0.0
+- reaction: R1747
+  fixed: 0.0
+- reaction: R1748
+  fixed: 0.0
+- reaction: R1765
+  fixed: 0.0
+- reaction: R1780
+  fixed: 0.0
