Reimport sbml/iFF708

--- a/sbml/iFF708/limits.yaml
+++ b/sbml/iFF708/limits.yaml
@@ -1,3 +1,104 @@
-- reaction: R_U214_
-  lower: 1.0
-  upper: 1.0
+- reaction: ACALxtI
+  upper: 0.0
+- reaction: ADxtI
+  upper: 0.0
+- reaction: AKGxtI
+  upper: 0.0
+- reaction: ALAxtI
+  upper: 0.0
+- reaction: AONAxtI
+  upper: 0.0
+- reaction: ARABxtI
+  upper: 0.0
+- reaction: ARGxtI
+  upper: 0.0
+- reaction: BTxtI
+  upper: 0.0
+- reaction: C140xtI
+  upper: 0.0
+- reaction: C160xtI
+  upper: 0.0
+- reaction: CITxtI
+  upper: 0.0
+- reaction: CYTSxtI
+  upper: 0.0
+- reaction: DAxtI
+  upper: 0.0
+- reaction: DCxtI
+  upper: 0.0
+- reaction: DGxtI
+  upper: 0.0
+- reaction: DIPEPxtI
+  upper: 0.0
+- reaction: DTTPxtI
+  upper: 0.0
+- reaction: ERGOxtI
+  upper: 0.0
+- reaction: FORxtI
+  upper: 0.0
+- reaction: FRUxtI
+  upper: 0.0
+- reaction: FUCxtI
+  upper: 0.0
+- reaction: GLACxtI
+  upper: 0.0
+- reaction: GLNxtI
+  upper: 0.0
+- reaction: GLTxtI
+  upper: 0.0
+- reaction: GLUxtI
+  upper: 0.0
+- reaction: GLYxtI
+  upper: 0.0
+- reaction: GSNxtI
+  upper: 0.0
+- reaction: HYXNxtI
+  upper: 0.0
+- reaction: INSxtI
+  upper: 0.0
+- reaction: LACxtI
+  upper: 0.0
+- reaction: LYSxtI
+  upper: 0.0
+- reaction: METxtI
+  upper: 0.0
+- reaction: MMETxtI
+  upper: 0.0
+- reaction: MNTxtI
+  upper: 0.0
+- reaction: MTHNxtI
+  upper: 0.0
+- reaction: NH3xtI
+  upper: 0.0
+- reaction: O2xtI
+  upper: 0.0
+- reaction: OGTxtI
+  upper: 0.0
+- reaction: PEPTxtI
+  upper: 0.0
+- reaction: PHExtI
+  upper: 0.0
+- reaction: PIMExtI
+  upper: 0.0
+- reaction: PNTOxtI
+  upper: 0.0
+- reaction: RFLAVxtI
+  upper: 0.0
+- reaction: RIBxtI
+  upper: 0.0
+- reaction: RMNxtI
+  upper: 0.0
+- reaction: SAMxtI
+  upper: 0.0
+- reaction: THRxtI
+  upper: 0.0
+- reaction: TRExtI
+  upper: 0.0
+- reaction: TRPxtI
+  upper: 0.0
+- reaction: TYRxtI
+  upper: 0.0
+- reaction: U214_
+  fixed: 1.0
+- reaction: XANxtI
+  upper: 0.0
