--- a/sbml/iIB711/model.yaml
+++ b/sbml/iIB711/model.yaml
@@ -1,9 +1,12 @@
 name: Streptomyces coelicolor genome-scale model
-biomass: R_r0793
 default_flux_limit: 1000.0
+extracellular: c
+compartments:
+- id: c
+  name: Cytosol
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
