Reimport sbml/iIT341

--- a/sbml/iIT341/model.yaml
+++ b/sbml/iIT341/model.yaml
@@ -1,9 +1,15 @@
 name: H. pylori iIT341
-biomass: R_BiomassHP_published
 default_flux_limit: 999999.0
+compartments:
+- id: c
+  adjacent_to: e
+  name: Cytosol
+- id: e
+  adjacent_to: c
+  name: Extraorganism
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
