Reimport sbml/iJO1366

--- a/sbml/iJO1366/limits.yaml
+++ b/sbml/iJO1366/limits.yaml
@@ -1,28 +1,22 @@
-- reaction: R_ATPM
+- reaction: ATPM
   lower: 3.15
-- reaction: R_CAT
+- reaction: CAT
   upper: 0.0
-- reaction: R_DHPTDNR
-  lower: 0.0
+- reaction: DHPTDNR
+  fixed: 0.0
+- reaction: DHPTDNRN
+  fixed: 0.0
+- reaction: FHL
   upper: 0.0
-- reaction: R_DHPTDNRN
-  lower: 0.0
+- reaction: SPODM
   upper: 0.0
-- reaction: R_FHL
+- reaction: SPODMpp
   upper: 0.0
-- reaction: R_SPODM
-  upper: 0.0
-- reaction: R_SPODMpp
-  upper: 0.0
-- reaction: R_SUCASPtpp
-  lower: 0.0
-  upper: 0.0
-- reaction: R_SUCFUMtpp
-  lower: 0.0
-  upper: 0.0
-- reaction: R_SUCMALtpp
-  lower: 0.0
-  upper: 0.0
-- reaction: R_SUCTARTtpp
-  lower: 0.0
-  upper: 0.0
+- reaction: SUCASPtpp
+  fixed: 0.0
+- reaction: SUCFUMtpp
+  fixed: 0.0
+- reaction: SUCMALtpp
+  fixed: 0.0
+- reaction: SUCTARTtpp
+  fixed: 0.0
