Reimport sbml/iJP815

--- a/sbml/iJP815/limits.yaml
+++ b/sbml/iJP815/limits.yaml
@@ -1,3 +1,5 @@
+- reaction: EX_C3668
+  lower: 0.0
 - reaction: IR00450
   upper: 0.0
 - reaction: IR01870
@@ -11,5 +13,4 @@
 - reaction: IR08984
   lower: 13.0
 - reaction: RR03816
-  lower: 0.0
-  upper: 0.0
+  fixed: 0.0
