Reimport sbml/iJR904

--- a/sbml/iJR904/model.yaml
+++ b/sbml/iJR904/model.yaml
@@ -1,11 +1,17 @@
 name: E. coli iJR904
-biomass: R_BiomassEcoli
 default_flux_limit: 999999.0
+compartments:
+- id: c
+  adjacent_to: e
+  name: Cytosol
+- id: e
+  adjacent_to: c
+  name: Extraorganism
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
 limits:
 - include: limits.yaml
