Reimport sbml/iKF1028

--- a/sbml/iKF1028/limits.yaml
+++ b/sbml/iKF1028/limits.yaml
@@ -1,3 +1,6 @@
+- reaction: EX_C0009
+  lower: 0.0
+- reaction: EX_C9324
+  lower: 0.0
 - reaction: IR00061
-  lower: 13.0
-  upper: 13.0
+  fixed: 13.0
