Reimport sbml/iMB745

--- a/sbml/iMB745/limits.yaml
+++ b/sbml/iMB745/limits.yaml
@@ -1,7 +1,6 @@
-- reaction: R_ATPM
+- reaction: ATPM
   lower: 2.5
-- reaction: R_CODHr
-  lower: 0.0
-  upper: 0.0
-- reaction: R_POR2
+- reaction: CODHr
+  fixed: 0.0
+- reaction: POR2
   upper: 1.0
