Reimport sbml/iNJ661m

--- a/sbml/iNJ661m/model.yaml
+++ b/sbml/iNJ661m/model.yaml
@@ -1,11 +1,17 @@
 name: iNJ661m_SBML_xml
-biomass: R_biomass_Mtb_9_60atp_test_NOF
 default_flux_limit: 1000.0
+compartments:
+- id: c
+  adjacent_to: e
+  name: Cytoplasm
+- id: e
+  adjacent_to: c
+  name: Extracellular
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
 limits:
 - include: limits.yaml
