Reimport sbml/iNJ661v

--- a/sbml/iNJ661v/limits.yaml
+++ b/sbml/iNJ661v/limits.yaml
@@ -1,32 +1,30 @@
-- reaction: R_ACACCT
+- reaction: ACACCT
   lower: -1000.0
-- reaction: R_ARB_Dabc
+- reaction: ARB_Dabc
   lower: -1000.0
-- reaction: R_CTPS2
+- reaction: CTPS2
   lower: -1000.0
-- reaction: R_CYO1b
+- reaction: CYO1b
   upper: 0.0
-- reaction: R_FAS161
+- reaction: FAS161
   upper: 0.0
-- reaction: R_GLCabc
+- reaction: GLCabc
   upper: 0.0
-- reaction: R_GLUSy
+- reaction: GLUSy
   lower: -1000.0
-- reaction: R_Kabc
+- reaction: Kabc
   upper: 0.0
-- reaction: R_MALT
+- reaction: MALT
   upper: 0.0
-- reaction: R_MCL
+- reaction: MCL
   lower: -1000.0
-- reaction: R_MMM2r
+- reaction: MMM2r
   lower: 0.0
-- reaction: R_MTI
-  lower: 0.0
-  upper: 0.0
-- reaction: R_NAt3_1
-  lower: 0.0
-  upper: 0.0
-- reaction: R_NTPTP1
+- reaction: MTI
+  fixed: 0.0
+- reaction: NAt3_1
+  fixed: 0.0
+- reaction: NTPTP1
   lower: -1000.0
-- reaction: R_RBK
+- reaction: RBK
   lower: -1000.0
