--- a/sbml/iPS189/model.yaml
+++ b/sbml/iPS189/model.yaml
@@ -1,8 +1,13 @@
 name: iPS189
-biomass: R_Biomass
+extracellular: Extra_organism
+compartments:
+- id: Cytosol
+  adjacent_to: Extra_organism
+- id: Extra_organism
+  adjacent_to: Cytosol
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
