Reimport sbml/iRC1080

--- a/sbml/iRC1080/limits.yaml
+++ b/sbml/iRC1080/limits.yaml
@@ -1,39 +1,47 @@
-- reaction: R_ATPM_LPAREN_NGAM_RPAREN_
-  lower: 0.183
-  upper: 0.183
-- reaction: R_PRISM_design_growth
-  lower: 51.8841087821545
-  upper: 51.8841087821545
-- reaction: R_PRISM_fluorescent_cool_215W
-  lower: 44.63332
-  upper: 44.63332
-- reaction: R_PRISM_fluorescent_warm_18W
-  lower: 8.09577
-  upper: 8.09577
-- reaction: R_PRISM_growth_room
-  lower: 58.46722
-  upper: 58.46722
-- reaction: R_PRISM_high_pressure_sodium
-  lower: 36.15037
-  upper: 36.15037
-- reaction: R_PRISM_incandescent_60W
-  lower: 15.94176
-  upper: 15.94176
-- reaction: R_PRISM_metal_halide
-  lower: 17.5256
-  upper: 17.5256
-- reaction: R_PRISM_red_LED_674nm
-  lower: 3.653
-  upper: 3.653
-- reaction: R_PRISM_red_LED_array_653nm
-  lower: 96.62811
-  upper: 96.62811
-- reaction: R_PRISM_solar_exo
-  lower: 417.5912
-  upper: 417.5912
-- reaction: R_PRISM_solar_litho
-  lower: 646.06656
-  upper: 646.06656
-- reaction: R_PRISM_white_LED
-  lower: 4.59151
-  upper: 4.59151
+- reaction: ATPM(NGAM)
+  fixed: 0.183
+- reaction: DM_o2D(u)
+  upper: 8.28
+- reaction: DM_photon298(c)
+  upper: 2000.0
+- reaction: DM_photon437(u)
+  upper: 2000.0
+- reaction: DM_photon438(u)
+  upper: 2000.0
+- reaction: DM_photon450(h)
+  upper: 2000.0
+- reaction: DM_photon490(s)
+  upper: 2000.0
+- reaction: DM_photon646(h)
+  upper: 2000.0
+- reaction: DM_photon673(u)
+  upper: 2000.0
+- reaction: DM_photon680(u)
+  upper: 2000.0
+- reaction: EX_starch(h)
+  lower: -10.0
+  upper: 0.0
+- reaction: PRISM_design_growth
+  fixed: 51.8841087821545
+- reaction: PRISM_fluorescent_cool_215W
+  fixed: 44.63332
+- reaction: PRISM_fluorescent_warm_18W
+  fixed: 8.09577
+- reaction: PRISM_growth_room
+  fixed: 58.46722
+- reaction: PRISM_high_pressure_sodium
+  fixed: 36.15037
+- reaction: PRISM_incandescent_60W
+  fixed: 15.94176
+- reaction: PRISM_metal_halide
+  fixed: 17.5256
+- reaction: PRISM_red_LED_674nm
+  fixed: 3.653
+- reaction: PRISM_red_LED_array_653nm
+  fixed: 96.62811
+- reaction: PRISM_solar_exo
+  fixed: 417.5912
+- reaction: PRISM_solar_litho
+  fixed: 646.06656
+- reaction: PRISM_white_LED
+  fixed: 4.59151
