Reimport sbml/iSB619

--- a/sbml/iSB619/limits.yaml
+++ b/sbml/iSB619/limits.yaml
@@ -1,60 +1,64 @@
-- reaction: R_6PGALSZ
+- reaction: 6PGALSZ
   lower: 0.0
-- reaction: R_ABTAr
+- reaction: ABTAr
   lower: 0.0
-- reaction: R_AKGDa
+- reaction: AKGDa
   lower: 0.0
-- reaction: R_ARGSSr
+- reaction: ARGSSr
   lower: 0.0
-- reaction: R_FDHr
+- reaction: FDHr
   lower: 0.0
-- reaction: R_FFSDr
+- reaction: FFSDr
   lower: 0.0
-- reaction: R_GLUDx
+- reaction: GLUDx
   lower: 0.0
-- reaction: R_GLYKr
+- reaction: GLYKr
   lower: 0.0
-- reaction: R_GTPCI
+- reaction: GTPCI
   lower: -999999.0
-- reaction: R_ME1_rev
+- reaction: ME1_rev
   lower: 0.0
-- reaction: R_NNATr
+- reaction: NNATr
   lower: 0.0
-- reaction: R_NOPD
+- reaction: NOPD
   lower: 0.0
-- reaction: R_OCTD
+- reaction: OCTD
   lower: 0.0
-- reaction: R_OOR3r
+- reaction: OOR3r
   lower: 0.0
-- reaction: R_SA_biomass_1a
+- reaction: SA_biomass_1a
   upper: 0.0
-- reaction: R_SERD_Lr
+- reaction: SERD_Lr
   lower: 0.0
-- reaction: R_UDCPKr
+- reaction: UDCPKr
   lower: 0.0
-- reaction: R_biomass_SA_2a
+- reaction: biomass_SA_2a
   upper: 0.0
-- reaction: R_biomass_SA_2b
+- reaction: biomass_SA_2b
   upper: 0.0
-- reaction: R_biomass_SA_3a
+- reaction: biomass_SA_3a
   upper: 0.0
-- reaction: R_biomass_SA_3b
+- reaction: biomass_SA_3b
   upper: 0.0
-- reaction: R_biomass_SA_4a
+- reaction: biomass_SA_4a
   upper: 0.0
-- reaction: R_biomass_SA_5a
+- reaction: biomass_SA_5a
   upper: 0.0
-- reaction: R_biomass_SA_6a
+- reaction: biomass_SA_6a
   upper: 0.0
-- reaction: R_biomass_SA_6b
+- reaction: biomass_SA_6b
   upper: 0.0
-- reaction: R_biomass_SA_7a
+- reaction: biomass_SA_7a
   upper: 0.0
-- reaction: R_biomass_SA_7b
+- reaction: biomass_SA_7b
   upper: 0.0
-- reaction: R_biomass_SA_lipids_only
+- reaction: biomass_SA_lipids_only
   upper: 0.0
-- reaction: R_biomass_SA_nuc_only
+- reaction: biomass_SA_nuc_only
   upper: 0.0
-- reaction: R_biomass_SA_only_AA
+- reaction: biomass_SA_only_AA
   upper: 0.0
+- reaction: sink_ahcys_c
+  lower: 0.0
+- reaction: sink_glyclt_c
+  lower: 0.0
