Reimport sbml/iSyn669

--- a/sbml/iSyn669/limits.yaml
+++ b/sbml/iSyn669/limits.yaml
@@ -1,42 +1,44 @@
-- reaction: R_1_1_1_3a
+- reaction: 1_1_1_3a
   lower: 0.0
-- reaction: R_1_1_1_49
+- reaction: '1_1_1_49'
   upper: 0.0
-- reaction: R_1_1_1_86a
+- reaction: 1_1_1_86a
   upper: 0.0
-- reaction: R_1_1_1_86b
+- reaction: 1_1_1_86b
   lower: 0.0
-- reaction: R_1_2_1_41
+- reaction: '1_2_1_41'
   upper: 0.0
-- reaction: R_1_3_1_26a
+- reaction: 1_3_1_26a
   upper: 0.0
-- reaction: R_1_3_1_75b
+- reaction: 1_3_1_75b
   lower: 0.0
-- reaction: R_1_4_1_4
+- reaction: '1_4_1_4'
   upper: 0.0
-- reaction: R_1_5_1_20a
+- reaction: 1_5_1_20a
   upper: 0.0
-- reaction: R_1_5_1_2a1
+- reaction: 1_5_1_2a1
   upper: 0.0
-- reaction: R_1_6_1_2
+- reaction: '1_6_1_2'
   lower: 0.0
-- reaction: R_1_8_1_9
+- reaction: '1_8_1_9'
   lower: 0.0
-- reaction: R_4_2_1_1b
+- reaction: 4_2_1_1b
   lower: -10.0
   upper: 10.0
-- reaction: R_NADHmain
+- reaction: CO2out
+  upper: 98.0
+- reaction: NADHmain
   lower: 0.5
-- reaction: R_NADPHmain
+- reaction: NADPHmain
   lower: 0.5
-- reaction: R_TRANS_RXN59G_152
+- reaction: TRANS_RXN59G_152
   lower: 0.01
   upper: 0.567
-- reaction: R_Thiored
+- reaction: Thiored
   lower: 0.0
-- reaction: R_transport_TRANS_RXN59G_245
+- reaction: transport_TRANS_RXN59G_245
   upper: 0.0
-- reaction: R_transport_TRANS_RXN59G_639
+- reaction: transport_TRANS_RXN59G_639
   upper: 0.0
-- reaction: R_urea_TRANS_RXN59G_410
+- reaction: urea_TRANS_RXN59G_410
   upper: 0.0
