--- a/sbml/iSyn669/model.yaml
+++ b/sbml/iSyn669/model.yaml
@@ -1,11 +1,14 @@
 name: SBML
-biomass: R_Biomass
 default_flux_limit: 10000.0
+extracellular: cell
+compartments:
+- id: cell
+  name: cell
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
 limits:
 - include: limits.yaml
