Reimport sbml/iTZ479

--- a/sbml/iTZ479/limits.yaml
+++ b/sbml/iTZ479/limits.yaml
@@ -1,18 +1,18 @@
-- reaction: R_ACt2r
+- reaction: ACt2r
   upper: 0.0
-- reaction: R_ALAALAr
+- reaction: ALAALAr
   lower: 0.0
-- reaction: R_FRUK_r
+- reaction: FRUK_r
   lower: 0.0
-- reaction: R_HSERTA
+- reaction: HSERTA
   lower: 0.0
-- reaction: R_METB1r
+- reaction: METB1r
   lower: 0.0
-- reaction: R_NADPDH1
+- reaction: NADPDH1
   lower: 0.0
-- reaction: R_NAD_H2
+- reaction: NAD_H2
   lower: 0.0
-- reaction: R_SHSL2r
+- reaction: SHSL2r
   lower: 0.0
-- reaction: R_TRPS1r
+- reaction: TRPS1r
   lower: 0.0
