--- a/sbml/iVS941/model.yaml
+++ b/sbml/iVS941/model.yaml
@@ -1,7 +1,11 @@
 name: iVS941
+extracellular: null
+compartments:
+- id: Cytosol
+  adjacent_to: Extra_organism
+- id: Extra_organism
+  adjacent_to: Cytosol
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
