--- a/sbml/iVS941_fixed/model.yaml
+++ b/sbml/iVS941_fixed/model.yaml
@@ -1,9 +1,15 @@
 name: SBML
-biomass: R_Biomass
 default_flux_limit: 1000.0
+compartments:
+- id: c
+  adjacent_to: e
+  name: Cytoplasm
+- id: e
+  adjacent_to: c
+  name: Extracellular
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
