Reimport sbml/iYL1228

--- a/sbml/iYL1228/limits.yaml
+++ b/sbml/iYL1228/limits.yaml
@@ -1,31 +1,30 @@
-- reaction: R_ABUTtex
+- reaction: ABUTtex
   upper: 0.0
-- reaction: R_ACMANAtex
+- reaction: ACMANAtex
   upper: 0.0
-- reaction: R_AKGtex
+- reaction: AKGtex
   upper: 0.0
-- reaction: R_ATPM
-  lower: 6.8
-  upper: 6.8
-- reaction: R_DCAtex
+- reaction: ATPM
+  fixed: 6.8
+- reaction: DCAtex
   upper: 0.0
-- reaction: R_FORtex
+- reaction: FORtex
   upper: 0.0
-- reaction: R_FUMtex
+- reaction: FUMtex
   upper: 0.0
-- reaction: R_HXAtex
+- reaction: HXAtex
   upper: 0.0
-- reaction: R_MALDtex
+- reaction: MALDtex
   upper: 0.0
-- reaction: R_NO2tex
+- reaction: NO2tex
   upper: 0.0
-- reaction: R_NO3tex
+- reaction: NO3tex
   upper: 0.0
-- reaction: R_PEAMNtex
+- reaction: PEAMNtex
   upper: 0.0
-- reaction: R_SUCCtex
+- reaction: SUCCtex
   upper: 0.0
-- reaction: R_TARTRtex
+- reaction: TARTRtex
   upper: 0.0
-- reaction: R_THRtex
+- reaction: THRtex
   upper: 0.0
