Reimport excel/iMR1_799

--- a/excel/iMR1_799/model.yaml
+++ b/excel/iMR1_799/model.yaml
@@ -1,8 +1,13 @@
 name: Shewanella oneidensis MR-1 iMR1_799 (Excel format), Ong et al., 2014
 biomass: SO_BIOMASSMACRO_DM_NOATP2
+compartments:
+- id: c
+  adjacent_to: e
+- id: e
+  adjacent_to: c
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
