Reimport matlab/recon2.04

--- a/matlab/recon2.04/limits.yaml
+++ b/matlab/recon2.04/limits.yaml
@@ -80,6 +80,8 @@
   upper: 0
 - reaction: CYOOm2
   upper: 0
+- reaction: DM_T_antigen_g_
+  lower: -1
 - reaction: FAOXC11BRC9BRx
   upper: 0
 - reaction: FAOXC9BRC7BRm
@@ -996,3 +998,5 @@
   upper: 0
 - reaction: r2496
   upper: 0
+- reaction: sink_pre_prot(r)
+  lower: -1
