Add missing exchange reaction for BIOMASS compound and remove duplicate compounds in a number of reactions

--- a/sbml/iMA871/exchange.yaml
+++ b/sbml/iMA871/exchange.yaml
@@ -312,6 +312,9 @@ compounds:
   upper: 0.0
 - id: M_PROPALe
   reaction: '1380'
+- id: M_BIOMASS
+  compartment: c
+  lower: 0
 - id: M_PROPe
   reaction: '1289'
 - id: M_PROe
