--- a/sbml/iMA871/reactions.yaml
+++ b/sbml/iMA871/reactions.yaml
@@ -6371,7 +6371,7 @@
   equation: E_482[c] + E_619[c] => Cx_2[c]
 - id: comp20
   name: 53574, 53574, 54890
-  equation: E_13[c] + E_13[c] + E_609[c] => Cx_20[c]
+  equation: E_13[c] + E_609[c] => Cx_20[c]
 - id: comp21
   name: 55510, 209315, 125186
   equation: E_5[c] + E_459[c] + E_603[c] => Cx_21[c]
@@ -6383,7 +6383,7 @@
   equation: E_11[c] + E_464[c] => Cx_3[c]
 - id: comp4
   name: 176118, 176118
-  equation: E_3[c] + E_3[c] => Cx_4[c]
+  equation: E_3[c] => Cx_4[c]
 - id: comp5
   name: 189424, 43578, 210021
   equation: E_15[c] + E_467[c] + E_611[c] => Cx_5[c]
@@ -6462,7 +6462,7 @@
       value: 1
 - id: comp7
   name: 201642, 201642, 130857, 55637, 40064
-  equation: E_4[c] + E_4[c] + E_602[c] + E_672[c] + E_717[c] => Cx_7[c]
+  equation: E_4[c] + E_602[c] + E_672[c] + E_717[c] => Cx_7[c]
 - id: comp8
   name: 205553, 205959, 57369, 177548, 211145
   equation: E_8[c] + E_461[c] + E_606[c] + E_674[c] + E_719[c] => Cx_8[c]
